[gd_scene load_steps=8 format=3 uid="uid://bj661pypnyxav"]

[ext_resource type="Script" uid="uid://dq7ttdlnq1mkl" path="res://Global/PauseManager/pause_menu.gd" id="1_4w50o"]
[ext_resource type="Shader" uid="uid://bk2oywlgqc3lp" path="res://Global/PauseManager/pause_menu.gdshader" id="2_if2j0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wkab8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fidcm"]
bg_color = Color(0.929632, 0.791503, 0.932026, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.42)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4i7yh"]
bg_color = Color(0.791232, 0.63318, 0.844492, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.42)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1g6jd"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.42)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qto2q"]
shader = ExtResource("2_if2j0")
shader_parameter/amount = 3.0

[node name="PauseMenu" type="Control"]
process_mode = 2
light_mask = 5
visibility_layer = 5
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4w50o")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -124.0
offset_top = -66.0
offset_right = 124.0
offset_bottom = 66.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Resume" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 27
theme_override_styles/focus = SubResource("StyleBoxEmpty_wkab8")
theme_override_styles/hover = SubResource("StyleBoxFlat_fidcm")
theme_override_styles/pressed = SubResource("StyleBoxFlat_4i7yh")
theme_override_styles/normal = SubResource("StyleBoxFlat_1g6jd")
text = "Resume"

[node name="Back To Menu" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 27
theme_override_styles/focus = SubResource("StyleBoxEmpty_wkab8")
theme_override_styles/hover = SubResource("StyleBoxFlat_fidcm")
theme_override_styles/pressed = SubResource("StyleBoxFlat_4i7yh")
theme_override_styles/normal = SubResource("StyleBoxFlat_1g6jd")
text = "Back To Menu"

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_qto2q")
layout_mode = 2
offset_left = 452.0
offset_top = 390.0
offset_right = 700.0
offset_bottom = 390.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="pressed" from="MarginContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Back To Menu" to="." method="_on_back_to_menu_pressed"]
